Fixing style that was causing animated gifs to look weird on mobile

--- a/web-assets/styles/gallery.css
+++ b/web-assets/styles/gallery.css
@@ -28,6 +28,3 @@ footer {
 	justify-content: center;
 	align-items: center;
 }
-#gallery .gallery-item img {
-	position: absolute;
-}
